# OSPROJECT

./: sharing_clipboard.txt
mouse_plotter/: CMakeLists.txt
mouse_plotter/include/: functions.h
mouse_plotter/src/: functions.c  main.c
mouse_saver/: CMakeLists.txt
mouse_saver/include/: functions.h
mouse_saver/src/: functions.c  main.c
